# lseq

./: LICENSE  README.md  lseq.cabal
app/: Main.hs
src/Data/: LSeq.hs
test/: Spec.hs
