name:                lseq
version:             0.1.0.0
synopsis:            Haskell implementation of a CRDT-based array with an underlying exponential tree and the allocation strategy LSEQ.
description:         Please see README.md
homepage:            https://github.com/niho/lseq
license:             MIT
license-file:        LICENSE
author:              Niklas Holmgren
maintainer:          niklas.holmgren@gmail.com
copyright:           2017 Niklas Holmgren
category:            Data, Data structures, Distributed computing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lseq-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lseq
  default-language:    Haskell2010

test-suite lseq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lseq
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/niho/lseq
